--- a/nodeapi/package.json
+++ b/nodeapi/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/Ullvang/MERN-Udemy#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.17",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
