--- a/nodeapi/package.json
+++ b/nodeapi/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Ullvang/MERN-Udemy#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.17",
