--- a/nodeapi/package.json
+++ b/nodeapi/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
     "mongoose": "^5.10.17",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
